<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sliding_menu_bg"
    android:orientation="vertical" >
	
    <Button
        android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/profile" />
    
    <Button
        android:id="@+id/marks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:text="@string/marks" />
    
    <Button
        android:id="@+id/logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/logout" />

</RelativeLayout>