<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:text="@string/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_toRightOf="@+id/date_label"
        android:paddingLeft="2dp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_toRightOf="@+id/date"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:text="@string/year" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_toRightOf="@+id/year_label"
        android:paddingLeft="2dp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/semester_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_toRightOf="@+id/year"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:text="@string/semester" />

    <TextView
        android:id="@+id/semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_toRightOf="@+id/semester_label"
        android:paddingLeft="2dp"
        android:paddingRight="5dp" />

</RelativeLayout>