<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable" >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/profile_header_bg"
        android:gravity="center"
        android:shadowColor="@android:color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/header_tv_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/university_data_block"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/data_block_shape"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/faculty_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/faculty_number"
                android:text="@string/faculty_number"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/faculty_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/faculty_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/faculty"
                android:text="@string/faculty"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/major_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/major"
                android:text="@string/major"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/degree_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/degree"
                android:text="@string/degree"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/status"
                android:text="@string/status"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_data_block"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/university_data_block"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/data_block_shape"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/pin_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/pin"
                android:text="@string/pin"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/birth_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/birth_date"
                android:text="@string/birth_date"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/nationality_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/nationality"
                android:text="@string/nationality"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/year_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:labelFor="@+id/year"
                android:text="@string/year"
                android:textColor="@color/data_block_label_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="10dp"
                android:textColor="@color/data_block_text" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>